<resources>
    <string name="app_name">Chat Me</string>
    <string name="need_new_account">Need New Account ?</string>
    <string name="login">Login</string>
    <string name="root">Users</string>
    <string name="float_widget">Float_widget</string>
    <string name="tickets_number">ticket</string>
    <string name="ticket_pref_key">Ragaa</string>
    <string name="profile_image">profileImage</string>
    <string name="logo">logo</string>
    <string name="float_widget_image">float widget image</string>
    <string name="image_again">image again</string>
    <string name="input">Input</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="e_mail">E-mail</string>
    <string name="password">password</string>
    <string name="create_new_account">Create new Account</string>
    <string name="name">name</string>
    <string name="e_mailEd">E-mail</string>
    <string name="create_account">Create Account</string>
    <string name="user_name">User Name</string>
    <string name="update_status">Update Status</string>
    <string name="update_profile">Update Profile</string>
    <string name="welcome_to_start_page">welcome to start page</string>
    <string name="update_your_status">Update Your Status</string>
    <string name="save_changes">Save Changes</string>
    <string name="account_settings">Account Settings</string>
    <string name="logout">Logout</string>
    <string name="message_text">Message Text</string>
    <string name="chat_now">chat now</string>
    <string name="user_status">user status</string>
    <string name="Error_login">Cannot sign in, please check your connection and try again</string>
    <string name="permission">Draw over other app permission not available. Closing the application</string>
    <string name="not_correct">not correct</string>
    <string name="signInWithEmail">signInWithEmail:failed</string>
    <string name="error_updata">error while update the status</string>
    <string name="succes_upload">Success upload image</string>
    <string name="set_message">Write your message here.</string>
    <string name="show_profile">Show Profile</string>
    <string name="dialog_title">Uploading Image....</string>
    <string name="dialog_message">please wait while we upload and process the image</string>
    <string name="save_dialog">Saving changes</string>
    <string name="message_dialog1">please wait while we update Your status</string>
    <string name="dialog_title2">Loading user Data</string>
    <string name="message_dialog2">please wait while load the user data</string>
    <string name="message_hint">Enter your message</string>
    <string name="bar_title">Chat Me</string>
    <string name="user_id">user_id</string>
    <string name="send_messages">Send Message</string>
    <string name="default_status">Hii, it is wonderful app you should try it :D</string>
    <string name="reg_bar_title">Create new Account</string>
    <string name="create_acc_dialog">Creating The Account</string>
    <string name="create_acc_msg">please wait while crating the account</string>
    <string name="welcome_to_chat_me_app">Welcome To Chat Me App</string>
    <string name="settings">Settings</string>
    <string name="upate">Update</string>
    <string name="chat_bar_title">let\'s chatting</string>
    <string name="chat_app">CHAT_APP</string>

</resources>
