<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.example.marian.chatme.activities.StartActivity">

    <TextView
        android:id="@+id/welcome_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_chat_me_app"
        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
        android:textSize="30sp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:gravity="center"/>

    <Button
        android:id="@+id/start_login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:text="@string/login"
        android:textSize="18sp"
        android:layout_below="@+id/start_reg_btn"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/start_reg_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:text="@string/need_new_account"
        android:textSize="18sp"
        android:layout_below="@+id/welcome_msg"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
