<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorA"
    tools:context="com.example.marian.chatme.activities.ProfileActivity">

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/default_avatar"
        android:contentDescription="@string/profile_image"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/profile_displayName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="35sp"
        android:textStyle="bold"
        tools:text="@string/user_name"
        android:textColor="#ffffff"
        android:layout_marginTop="96dp"
        android:layout_below="@+id/profile_image"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/profile_displayStatus"
        android:textColor="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="22sp"
        tools:text="@string/default_status"
        android:layout_below="@+id/profile_displayName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="19dp" />

</RelativeLayout>
