<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorA"
    tools:context="com.example.marian.chatme.activities.SettingsActivity">

    <include
        android:id="@+id/settings_bar"
        layout="@layout/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/set_profile"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginTop="31dp"
        android:src="@drawable/default_avatar"
        tools:layout_editor_absoluteX="89dp"
        tools:layout_editor_absoluteY="55dp"
        android:layout_below="@+id/settings_bar"
        android:layout_centerHorizontal="true" />


    <TextView
        android:id="@+id/set_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_profile"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/user_name"
        android:textColor="#ffffff"
        android:textSize="24sp" />


    <TextView
        android:id="@+id/set_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_name"
        android:layout_margin="20dp"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/default_status"
        android:textColor="#ffffff"
        android:textSize="18sp" />


    <Button
        android:id="@+id/set_status_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/message_text_background"
        android:text="@string/update_status"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="34dp" />


    <Button
        android:id="@+id/set_profile_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/message_text_background"
        android:text="@string/update_profile"
        android:textColor="#ffffff"
        android:textSize="24sp"
        android:layout_alignBottom="@+id/set_status_btn"
        android:layout_alignStart="@+id/set_status_btn"
        android:layout_marginBottom="85dp" />


</RelativeLayout>
